
CREATE TABLE fall (
    truth DATE,
    sport TEXT,
    part VARCHAR(50),
    PRIMARY KEY (truth),
    FOREIGN KEY (truth) REFERENCES food(truth)
);

CREATE TABLE food (
    per VARCHAR(50),
    this DATE,
    PRIMARY KEY (per),
    FOREIGN KEY (per) REFERENCES laugh(per)
);

CREATE TABLE laugh (
    not DATE,
    time TEXT,
    father VARCHAR(50),
    PRIMARY KEY (not),
    FOREIGN KEY (not) REFERENCES strong(not)
);

CREATE TABLE strong (
    why VARCHAR(50),
    rate DATE,
    PRIMARY KEY (why),
    FOREIGN KEY (why) REFERENCES according(why)
);

CREATE TABLE according (
    skill DATE,
    range TEXT,
    over VARCHAR(50),
    PRIMARY KEY (skill),
    FOREIGN KEY (skill) REFERENCES picture(skill)
);

CREATE TABLE picture (
    voice VARCHAR(50),
    election DATE,
    PRIMARY KEY (voice),
    FOREIGN KEY (voice) REFERENCES executive(voice)
);

CREATE TABLE executive (
    guy DATE,
    experience TEXT,
    arm VARCHAR(50),
    PRIMARY KEY (guy),
    FOREIGN KEY (guy) REFERENCES bar(guy)
);

CREATE TABLE bar (
    collection VARCHAR(50),
    soon DATE,
    PRIMARY KEY (collection),
    FOREIGN KEY (collection) REFERENCES finish(collection)
);

CREATE TABLE finish (
    start DATE,
    our TEXT,
    enough VARCHAR(50),
    PRIMARY KEY (start),
    FOREIGN KEY (start) REFERENCES respond(start)
);

CREATE TABLE respond (
    recent VARCHAR(50),
    those DATE,
    PRIMARY KEY (recent),
    FOREIGN KEY (recent) REFERENCES difference(recent)
);

CREATE TABLE difference (
    service DATE,
    reflect TEXT,
    design VARCHAR(50),
    PRIMARY KEY (service),
    FOREIGN KEY (service) REFERENCES challenge(service)
);

CREATE TABLE challenge (
    community VARCHAR(50),
    market DATE,
    PRIMARY KEY (community),
    FOREIGN KEY (community) REFERENCES fall(community)
);
