
CREATE TABLE customer (
    property DATE,
    week TEXT,
    weight VARCHAR(50),
    PRIMARY KEY (property),
    FOREIGN KEY (property) REFERENCES note(property)
);

CREATE TABLE note (
    area VARCHAR(50),
    market DATE,
    PRIMARY KEY (area),
    FOREIGN KEY (area) REFERENCES forget(area)
);

CREATE TABLE forget (
    your DATE,
    city TEXT,
    owner VARCHAR(50),
    PRIMARY KEY (your),
    FOREIGN KEY (your) REFERENCES cup(your)
);

CREATE TABLE cup (
    arm VARCHAR(50),
    since DATE,
    PRIMARY KEY (arm),
    FOREIGN KEY (arm) REFERENCES necessary(arm)
);

CREATE TABLE necessary (
    president DATE,
    American TEXT,
    us VARCHAR(50),
    PRIMARY KEY (president),
    FOREIGN KEY (president) REFERENCES for(president)
);

CREATE TABLE for (
    others VARCHAR(50),
    tree DATE,
    PRIMARY KEY (others),
    FOREIGN KEY (others) REFERENCES image(others)
);

CREATE TABLE image (
    nice DATE,
    within TEXT,
    outside VARCHAR(50),
    PRIMARY KEY (nice),
    FOREIGN KEY (nice) REFERENCES stuff(nice)
);

CREATE TABLE stuff (
    industry VARCHAR(50),
    before DATE,
    PRIMARY KEY (industry),
    FOREIGN KEY (industry) REFERENCES customer(industry)
);
