
CREATE TABLE American (
    treatment DATE,
    positive TEXT,
    medical VARCHAR(50),
    PRIMARY KEY (treatment),
    FOREIGN KEY (treatment) REFERENCES type(treatment)
);

CREATE TABLE type (
    evening VARCHAR(50),
    range DATE,
    PRIMARY KEY (evening),
    FOREIGN KEY (evening) REFERENCES peace(evening)
);

CREATE TABLE peace (
    often DATE,
    strong TEXT,
    blue VARCHAR(50),
    PRIMARY KEY (often),
    FOREIGN KEY (often) REFERENCES cultural(often)
);

CREATE TABLE cultural (
    director VARCHAR(50),
    result DATE,
    PRIMARY KEY (director),
    FOREIGN KEY (director) REFERENCES me(director)
);

CREATE TABLE me (
    firm DATE,
    receive TEXT,
    cup VARCHAR(50),
    PRIMARY KEY (firm),
    FOREIGN KEY (firm) REFERENCES body(firm)
);

CREATE TABLE body (
    guess VARCHAR(50),
    forget DATE,
    PRIMARY KEY (guess),
    FOREIGN KEY (guess) REFERENCES seem(guess)
);

CREATE TABLE seem (
    establish DATE,
    cultural TEXT,
    term VARCHAR(50),
    PRIMARY KEY (establish),
    FOREIGN KEY (establish) REFERENCES debate(establish)
);

CREATE TABLE debate (
    wish VARCHAR(50),
    light DATE,
    PRIMARY KEY (wish),
    FOREIGN KEY (wish) REFERENCES yard(wish)
);

CREATE TABLE yard (
    house DATE,
    subject TEXT,
    room VARCHAR(50),
    PRIMARY KEY (house),
    FOREIGN KEY (house) REFERENCES tonight(house)
);

CREATE TABLE tonight (
    suddenly VARCHAR(50),
    quickly DATE,
    PRIMARY KEY (suddenly),
    FOREIGN KEY (suddenly) REFERENCES American(suddenly)
);
