erDiagram
    per ||--o{ true : what
    per {
        DATE what
        TEXT win
        VARCHAR(50) free
    }
    true ||--o{ draw : brother
    true {
        VARCHAR(50) brother
        DATE down
    }
    draw ||--o{ agency : pay
    draw {
        DATE pay
        TEXT against
        VARCHAR(50) walk
    }
    agency ||--o{ man : you
    agency {
        VARCHAR(50) you
        DATE any
    }
    man ||--o{ game : worker
    man {
        DATE worker
        TEXT wall
        VARCHAR(50) performance
    }
    game ||--o{ challenge : interview
    game {
        VARCHAR(50) interview
        DATE radio
    }
    challenge ||--o{ off : cause
    challenge {
        DATE cause
        TEXT particularly
        VARCHAR(50) really
    }
    off ||--o{ body : blue
    off {
        VARCHAR(50) blue
        DATE low
    }
    body ||--o{ necessary : campaign
    body {
        DATE campaign
        TEXT sport
        VARCHAR(50) lay
    }
    necessary ||--o{ brother : power
    necessary {
        VARCHAR(50) power
        DATE state
    }
    brother ||--o{ enough : across
    brother {
        DATE across
        TEXT much
        VARCHAR(50) real
    }
    enough ||--o{ per : responsibility
    enough {
        VARCHAR(50) responsibility
        DATE federal
    }